# actix-web-app

./: Cargo.toml
async-hello/: Cargo.toml
async-hello/src/: main.rs
p2p-learn/: Cargo.toml
tutor-web-app-ssr/: Cargo.toml
tutor-web-app-ssr/static/: static-web-page.html  style.css
tutor-web-app-ssr/static/iter1/: index.html
tutor-web-app-ssr/static/iter2/: form.html  user.html
tutor-web-app-ssr/static/iter3/: list.html
tutor-web-app-ssr/static/iter4/: list.html
