[package]
name = "tutor-web-app-ssr"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
actix-files = "0.6.6"

tera = "1.20.0"
serde = { version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
awc = { version = "3.7.0", features = ["openssl"]}

[dev-dependencies]
actix-rt = "2.10.0"